# tden-compute-worker

./: .gitignore  README.md  README.zh.md  package.json
src/: index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/src/: App.tsx  main.tsx  styles.css
src/src/pages/: Earnings.tsx  Pools.tsx  Settings.tsx  Workers.tsx
