[package]
name = "tden-compute-worker"
version = "0.1.0"
description = "TDEN compute worker — provides GPU/CPU/NPU to SIN nodes for token rewards"
authors = ["TDEN Open Source Community"]
edition = "2021"

[lib]
name = "tden_compute_worker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "tden-compute-worker"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
log = "0.4"
anyhow = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
